docs/apache-airflow-providers-amazon/8.4.0/_sources/_api/airflow/providers/amazon/aws/transfers/base/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.transfers.base`
=====================================================

.. py:module:: airflow.providers.amazon.aws.transfers.base

.. autoapi-nested-parse::

   This module contains base AWS to AWS transfer operator.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.base.AwsToAwsBaseOperator




.. py:class:: AwsToAwsBaseOperator(*, source_aws_conn_id = AwsBaseHook.default_conn_name, dest_aws_conn_id = NOTSET, aws_conn_id = NOTSET, **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Base class for AWS to AWS transfer operators.

   :param source_aws_conn_id: The Airflow connection used for AWS credentials
       to access DynamoDB. If this is None or empty then the default boto3
       behaviour is used. If running Airflow in a distributed manner and
       source_aws_conn_id is None or empty, then default boto3 configuration
       would be used (and must be maintained on each worker node).
   :param dest_aws_conn_id: The Airflow connection used for AWS credentials
       to access S3. If this is not set then the source_aws_conn_id connection is used.
   :param aws_conn_id: The Airflow connection used for AWS credentials (deprecated; use source_aws_conn_id).


   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('source_aws_conn_id', 'dest_aws_conn_id')

      


